[package]
name = "mersenne-twister"
version = "0.1.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/mersenne-twister"
license = "MIT"
description = "mersenne twister pseudorandom number generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
