[package]
name = "mersenne-twister-m"
version = "0.2.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/mersenne-twister"
license = "MIT"
description = "mersenne twister pseudorandom number generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
rand_core = "0.6.4"
