[package]
name = "mersenne-twister-m"
version = "0.4.1"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/mersenne-twister"
license = "MIT"
description = "mersenne twister pseudorandom number generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
rand = ["dep:rand_core"]

[dependencies]
rand_core = { version = "0.9.3", optional = true }
seq-macro = "0.3.6"
